fix dropdown visibility

--- a/src/SidebarWithMenu/StoryMenu.module.css
+++ b/src/SidebarWithMenu/StoryMenu.module.css
@@ -54,7 +54,6 @@
 }
 
 .button:disabled {
-    background: #ccc;
     cursor: not-allowed;
 }
 
